´refactor: Prefer Path.of over Paths.get
Applied OpenRewrite recipe org.openrewrite.java.migrate.UpgradeToJava17